--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -13,6 +13,9 @@
 					<a class="nav-link" href="#">Link</a>
 				</li>
 				<li class="nav-item dropdown">
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('app_statistique') }}">Statistique</a>
+				</li>
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Dropdown
 					</a>
